samples/_failures_safe/1761127701_17d586_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eab22e57.c: In function ‘main’:
./samples/SAFE/__tmp_eab22e57.c:175:5: error: expected expression at end of input
  175 |     if (strlen(input) == 0)
      |     ^~
./samples/SAFE/__tmp_eab22e57.c:175:5: error: expected declaration or statement at end of input
